--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,5 +1,17 @@
 body {
-    color: blue;
-    text-align: center;
+    color: #333;
+    text-align: left;
     font-family: "Arial";
+}
+
+#container {
+    width: 70%;
+    padding: 1em;
+    text-align: left;
+    border: 1px solid #DD1;
+    margin: 0 auto;
+}
+
+#container h1 {
+    font-size: 20px;
 }
